Fixed 15" CSS to eliminate extra whitespace on the right edge of front panel

--- a/skin/retail-1024x768/user/overlay.css
+++ b/skin/retail-1024x768/user/overlay.css
@@ -13,7 +13,9 @@
 }
 
 .leftPanel {
-    width: 500px;
+    width: 504px;
+    min-width: 504px;
+    max-width: 504px;
 }
 
 .rightPanel {
