--- a/skin/traditional-1024x768/user/overlay.css
+++ b/skin/traditional-1024x768/user/overlay.css
@@ -13,9 +13,9 @@
 }
 
 .leftPanel {
-    width: 500px;
-    min-width: 500px;
-    max-width: 500px;
+    width: 504px;
+    min-width: 504px;
+    max-width: 504px;
 }
 
 .rightPanel {
